# gpu-compute-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  WARP.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  example_gpu_usage.py  example_usage.py  main.py  pyproject.toml  run_dev.py
alembic/: env.py
app/: main.py
app/api/: auth.py  dag.py  enhanced_auth.py  enhanced_tasks.py  gpu_jobs.py  protected.py  providers.py
app/core/: auth.py  celery_app.py  config.py  dag_engine.py  database.py  init_data.py  mlflow_config.py  permissions.py  scheduler.py  scheduler_old.py  scheduling.py  (+3 more)
docs/: DOCKER_SETUP.md  FRONTEND_GUIDE.md  QUICK_START.md  gpu-providers.md  integration-test-report.md  project-structure.md  testing.md  websocket-realtime-status.md
examples/: example_runpod_usage.py  websocket_client_example.py
frontend/: Dockerfile.dev  FRONTEND_GUIDE.md  components.d.ts  package-lock.json  package.json  vite.config.ts  vitest.config.ts
monitoring/: prometheus.yml
scripts/: init-db.sql  manage_db.py  reset_db.py  run_tests.sh  start-docker.sh  start.sh  start_backend.sh  start_dev.sh
tests/: conftest.py  test_alibaba_mocked.py  test_api_basic.py  test_api_integration.py  test_app.py  test_auth.py  test_complete_functionality.py  test_core_functionality.py  test_dag.py  test_dag_api.py  test_gpu_providers.py  test_models.py  test_runpod_mocked.py  test_scheduler.py  test_scheduling_config.py  test_task_status_broadcaster.py  test_tencent_mocked.py  test_utils.py  test_websocket.py  test_websocket_manager.py
(+50 files in other folders)
